--- a/packages/contracts/foundry.toml
+++ b/packages/contracts/foundry.toml
@@ -1,13 +1,19 @@
 [profile.default]
+solc_version = "0.8.17"
 ffi = false
 fuzz_runs = 256
 optimizer = true
-optimizer_runs = 1000000
-verbosity = 1
-libs = ["../../node_modules", "../../../mud"]
+optimizer_runs = 3000
+verbosity = 2
 src = "src"
 test = "test"
 out = "out"
+allow_paths = [
+  # pnpm symlinks to the project root's node_modules
+  "../../node_modules",
+  # we're also using linked mud packages from the monorepo
+  "../../../../packages"
+]
 extra_output_files = [
   "abi",
   "evm.bytecode"
@@ -16,6 +22,3 @@ fs_permissions = [{ access = "read", path = "./"}]
 
 [profile.lattice-testnet]
 eth_rpc_url = "https://follower.testnet-chain.linfra.xyz"
-
-[profile.hackathon-testnet]
-eth_rpc_url = "https://lattice-goerli-sequencer.optimism.io"
