--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -1,41 +1,35 @@
 {
   "name": "contracts",
-  "license": "MIT",
   "version": "0.2.0",
-  "private": true,
+  "license": "MIT",
   "scripts": {
-    "build": "forge clean && forge build",
-    "deploy": "pnpm run initialize && mud deploy",
-    "deploy:testnet": "pnpm run initialize && mud deploy --profile=lattice-testnet",
-    "deploy:hackathon": "pnpm run initialize && mud deploy --profile=hackathon-testnet",
-    "dev": "pnpm mud dev-contracts --tsgenOutput ../client/src/mud",
-    "initialize": "pnpm run tablegen && pnpm run worldgen && pnpm run build && pnpm run worldtypes && pnpm run tsgen",
+    "build": "pnpm run build:mud && pnpm run build:abi && pnpm run build:typechain",
+    "build:abi": "forge clean && forge build",
+    "build:mud": "mud tablegen && mud worldgen",
+    "build:typechain": "rimraf types && typechain --target=ethers-v5 out/IWorld.sol/IWorld.json",
+    "deploy:local": "pnpm run build && mud deploy",
+    "deploy:testnet": "pnpm run build && mud deploy --profile=lattice-testnet",
+    "dev": "pnpm mud dev-contracts",
     "lint": "pnpm run prettier && pnpm run solhint",
     "prettier": "prettier --write 'src/**/*.sol'",
     "solhint": "solhint --config ./.solhint.json 'src/**/*.sol' --fix",
-    "tablegen": "mud tablegen",
-    "worldgen": "mud worldgen",
-    "worldtypes": "rimraf types && typechain --target=ethers-v5 out/IWorld.sol/IWorld.json",
-    "test": "tsc --noEmit && mud test",
-    "tsgen": "mud tsgen --configPath mud.config.ts --out ../client/src/mud"
+    "test": "mud test"
   },
-  "dependencies": {
+  "devDependencies": {
     "@ethersproject/abi": "^5.7.0",
     "@ethersproject/bytes": "^5.7.0",
     "@ethersproject/providers": "^5.7.2",
-    "@latticexyz/cli": "2.0.0-next.0",
-    "@latticexyz/schema-type": "2.0.0-next.0",
-    "@latticexyz/std-contracts": "2.0.0-next.0",
-    "@latticexyz/store": "2.0.0-next.0",
-    "@latticexyz/world": "2.0.0-next.0",
-    "@latticexyz/config": "2.0.0-next.0",
-    "ethers": "^5.7.2"
-  },
-  "devDependencies": {
+    "@latticexyz/cli": "2.0.0-next.2",
+    "@latticexyz/schema-type": "2.0.0-next.2",
+    "@latticexyz/std-contracts": "2.0.0-next.2",
+    "@latticexyz/store": "2.0.0-next.2",
+    "@latticexyz/world": "2.0.0-next.2",
+    "@latticexyz/config": "2.0.0-next.2",
+    "ethers": "^5.7.2",
     "@typechain/ethers-v5": "^11.0.0",
     "@types/node": "^20.4.4",
-    "ds-test": "https://github.com/dapphub/ds-test.git#c9ce3f25bde29fc5eb9901842bf02850dfd2d084",
-    "forge-std": "https://github.com/foundry-rs/forge-std.git#b4f121555729b3afb3c5ffccb62ff4b6e2818fd3",
+    "ds-test": "https://github.com/dapphub/ds-test.git#e282159d5170298eb2455a6c05280ab5a73a4ef0",
+    "forge-std": "https://github.com/foundry-rs/forge-std.git#74cfb77e308dd188d2f58864aaf44963ae6b88b1",
     "prettier": "^3.0.0",
     "prettier-plugin-solidity": "^1.1.3",
     "solhint": "^3.4.1",
