chore: bump mud

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -28,21 +28,22 @@
   },
   "dependencies": {
     "@ethersproject/providers": "^5.7.2",
-    "@latticexyz/common": "2.0.0-next.2",
-    "@latticexyz/network": "2.0.0-next.2",
-    "@latticexyz/recs": "2.0.0-next.2",
-    "@latticexyz/schema-type": "2.0.0-next.2",
-    "@latticexyz/services": "2.0.0-next.2",
-    "@latticexyz/std-client": "2.0.0-next.2",
-    "@latticexyz/store-sync": "2.0.0-next.2",
-    "@latticexyz/utils": "2.0.0-next.2",
-    "@latticexyz/world": "2.0.0-next.2",
+    "@latticexyz/common": "2.0.0-next.3",
+    "@latticexyz/dev-tools": "2.0.0-next.3",
+    "@latticexyz/recs": "2.0.0-next.3",
+    "@latticexyz/schema-type": "2.0.0-next.3",
+    "@latticexyz/services": "2.0.0-next.3",
+    "@latticexyz/store-sync": "2.0.0-next.3",
+    "@latticexyz/utils": "2.0.0-next.3",
+    "@latticexyz/world": "2.0.0-next.3",
+    "contracts": "workspace:*",
+    "ethers": "^5.7.2",
+    "rxjs": "^7.8.1",
+    "viem": "1.6.0",
     "@sanity/block-content-to-html": "^2.0.0",
     "@sanity/client": "^6.4.6",
     "@sanity/image-url": "^1.0.2",
     "animejs": "^3.2.1",
-    "contracts": "workspace:*",
-    "ethers": "^5.7.2",
     "gsap": "^3.12.2",
     "howler": "^2.2.3",
     "just-throttle": "^4.2.0",
@@ -51,9 +52,7 @@
     "matter": "^0.2.0",
     "matter-dom-plugin": "^1.0.0",
     "pathfinding": "^0.4.18",
-    "rxjs": "^7.8.1",
     "svelte-markdown": "^0.3.0",
-    "uuid": "^9.0.0",
-    "viem": "1.6.0"
+    "uuid": "^9.0.0"
   }
 }
