--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -36,20 +36,19 @@
     "@latticexyz/store-sync": "2.0.0-next.8",
     "@latticexyz/utils": "2.0.0-next.8",
     "@latticexyz/world": "2.0.0-next.8",
-    "contracts": "workspace:*",
-    "ethers": "^5.7.2",
-    "rxjs": "^7.8.1",
-    "viem": "1.6.0",
     "@sanity/block-content-to-html": "^2.0.0",
     "@sanity/client": "^6.4.9",
     "@sanity/image-url": "^1.0.2",
     "animejs": "^3.2.1",
+    "contracts": "workspace:*",
+    "d3": "^7.8.5",
     "d3-drag": "^3.0.0",
     "d3-force": "^3.0.0",
     "d3-scale": "^4.0.2",
     "d3-scale-chromatic": "^3.0.0",
     "d3-selection": "^3.0.0",
     "d3-zoom": "^3.0.0",
+    "ethers": "^5.7.2",
     "gsap": "^3.12.2",
     "howler": "^2.2.3",
     "just-throttle": "^4.2.0",
@@ -58,7 +57,9 @@
     "matter": "^0.2.0",
     "matter-dom-plugin": "^1.0.0",
     "pathfinding": "^0.4.18",
+    "rxjs": "^7.8.1",
     "svelte-markdown": "^0.4.0",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "viem": "1.6.0"
   }
 }
