--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -40,6 +40,7 @@
     "@sanity/client": "^6.4.9",
     "@sanity/image-url": "^1.0.2",
     "animejs": "^3.2.1",
+    "ascii-text-generator": "^1.0.5",
     "contracts": "workspace:*",
     "d3": "^7.8.5",
     "d3-drag": "^3.0.0",
