--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test": "pnpm recursive run test"
   },
   "devDependencies": {
-    "@latticexyz/cli": "2.0.0-next.9",
+    "@latticexyz/cli": "2.0.0-main-5d19b125",
     "@typescript-eslint/eslint-plugin": "5.60.0",
     "@typescript-eslint/parser": "5.60.0",
     "eslint": "8.49.0",
