--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -28,14 +28,14 @@
   },
   "dependencies": {
     "@ethersproject/providers": "^5.7.2",
-    "@latticexyz/common": "2.0.0-next.9",
-    "@latticexyz/dev-tools": "2.0.0-next.9",
-    "@latticexyz/recs": "2.0.0-next.9",
-    "@latticexyz/schema-type": "2.0.0-next.9",
-    "@latticexyz/services": "2.0.0-next.9",
-    "@latticexyz/store-sync": "2.0.0-next.9",
-    "@latticexyz/utils": "2.0.0-next.9",
-    "@latticexyz/world": "2.0.0-next.9",
+    "@latticexyz/common": "2.0.0-main-5d19b125",
+    "@latticexyz/dev-tools": "2.0.0-main-5d19b125",
+    "@latticexyz/recs": "2.0.0-main-5d19b125",
+    "@latticexyz/schema-type": "2.0.0-main-5d19b125",
+    "@latticexyz/services": "2.0.0-main-5d19b125",
+    "@latticexyz/store-sync": "2.0.0-main-5d19b125",
+    "@latticexyz/utils": "2.0.0-main-5d19b125",
+    "@latticexyz/world": "2.0.0-main-5d19b125",
     "@sanity/block-content-to-html": "^2.0.0",
     "@sanity/client": "^6.4.9",
     "@sanity/image-url": "^1.0.2",
