--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -58,10 +58,12 @@
     "matter": "^0.2.0",
     "matter-dom-plugin": "^1.0.0",
     "pathfinding": "^0.4.18",
+    "react": "^18.2.0",
     "rxjs": "^7.8.1",
     "svelte-markdown": "^0.4.0",
+    "svelte-tippy": "^1.3.2",
+    "tippy.js": "^6.3.7",
     "uuid": "^9.0.0",
-    "viem": "1.6.0",
-    "react": "^18.2.0"
+    "viem": "1.6.0"
   }
 }
