--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -19,12 +19,12 @@
     "@ethersproject/abi": "^5.7.0",
     "@ethersproject/bytes": "^5.7.0",
     "@ethersproject/providers": "^5.7.2",
-    "@latticexyz/cli": "2.0.0-main-143a6ea5",
-    "@latticexyz/config": "2.0.0-main-143a6ea5",
-    "@latticexyz/schema-type": "2.0.0-main-143a6ea5",
-    "@latticexyz/store": "2.0.0-main-143a6ea5",
-    "@latticexyz/world": "2.0.0-main-143a6ea5",
-    "@latticexyz/world-modules": "2.0.0-main-143a6ea5",
+    "@latticexyz/cli": "2.0.0-next.12",
+    "@latticexyz/config": "2.0.0-next.12",
+    "@latticexyz/schema-type": "2.0.0-next.12",
+    "@latticexyz/store": "2.0.0-next.12",
+    "@latticexyz/world": "2.0.0-next.12",
+    "@latticexyz/world-modules": "2.0.0-next.12",
     "@typechain/ethers-v5": "^11.0.0",
     "@types/node": "^20.4.4",
     "ds-test": "https://github.com/dapphub/ds-test.git#e282159d5170298eb2455a6c05280ab5a73a4ef0",
