--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -13,34 +13,32 @@
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "^2.1.0",
-    "@sveltejs/kit": "^1.24.1",
-    "@sveltejs/vite-plugin-svelte": "^2.4.5",
-    "@tsconfig/svelte": "^5.0.0",
-    "@types/howler": "^2.2.7",
+    "@sveltejs/kit": "^1.27.2",
+    "@sveltejs/vite-plugin-svelte": "^2.4.6",
+    "@tsconfig/svelte": "^5.0.2",
+    "@types/howler": "^2.2.10",
     "@types/lodash": "^4.14.197",
     "@types/uuid": "^9.0.3",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "@typescript-eslint/parser": "^6.4.0",
     "sass": "^1.66.1",
-    "svelte": "^4.2.0",
-    "vite": "4.4.9",
-    "wait-port": "^1.0.4"
+    "svelte": "^4.2.2",
+    "vite": "4.5.0",
+    "wait-port": "^1.1.0"
   },
   "dependencies": {
     "@ethersproject/providers": "^5.7.2",
-    "@latticexyz/common": "2.0.0-main-143a6ea5",
-    "@latticexyz/dev-tools": "2.0.0-main-143a6ea5",
-    "@latticexyz/recs": "2.0.0-main-143a6ea5",
-    "@latticexyz/schema-type": "2.0.0-main-143a6ea5",
-    "@latticexyz/services": "2.0.0-main-143a6ea5",
-    "@latticexyz/store-sync": "2.0.0-main-143a6ea5",
-    "@latticexyz/utils": "2.0.0-main-143a6ea5",
-    "@latticexyz/world": "2.0.0-main-143a6ea5",
+    "@latticexyz/common": "2.0.0-next.12",
+    "@latticexyz/dev-tools": "2.0.0-next.12",
+    "@latticexyz/recs": "2.0.0-next.12",
+    "@latticexyz/schema-type": "2.0.0-next.12",
+    "@latticexyz/services": "2.0.0-next.12",
+    "@latticexyz/store-sync": "2.0.0-next.12",
+    "@latticexyz/utils": "2.0.0-next.12",
+    "@latticexyz/world": "2.0.0-next.12",
     "@sanity/block-content-to-html": "^2.0.0",
-    "@sanity/client": "^6.4.9",
+    "@sanity/client": "^6.7.0",
     "@sanity/image-url": "^1.0.2",
-    "animejs": "^3.2.1",
-    "ascii-text-generator": "^1.0.5",
     "contracts": "workspace:*",
     "d3": "^7.8.5",
     "d3-drag": "^3.0.0",
@@ -50,20 +48,11 @@
     "d3-selection": "^3.0.0",
     "d3-zoom": "^3.0.0",
     "ethers": "^5.7.2",
-    "gsap": "^3.12.2",
     "howler": "^2.2.3",
-    "just-throttle": "^4.2.0",
-    "leader-line": "^1.0.7",
     "lodash": "^4.17.21",
-    "matter": "^0.2.0",
-    "matter-dom-plugin": "^1.0.0",
     "pathfinding": "^0.4.18",
-    "react": "^18.2.0",
     "rxjs": "^7.8.1",
-    "svelte-markdown": "^0.4.0",
-    "svelte-tippy": "^1.3.2",
-    "tippy.js": "^6.3.7",
     "uuid": "^9.0.0",
-    "viem": "1.6.0"
+    "viem": "1.14.0"
   }
 }
