--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "build": "pnpm run build:mud && pnpm run build:abi && pnpm run build:typechain",
     "build:abi": "forge clean && forge build",
+    "build:abi-ts": "mud abi-ts",
     "build:mud": "mud tablegen && mud worldgen",
     "build:typechain": "rimraf types && typechain --target=ethers-v5 out/IWorld.sol/IWorld.json",
     "deploy:local": "pnpm run build && mud deploy",
@@ -19,12 +20,12 @@
     "@ethersproject/abi": "^5.7.0",
     "@ethersproject/bytes": "^5.7.0",
     "@ethersproject/providers": "^5.7.2",
-    "@latticexyz/cli": "2.0.0-next.12",
-    "@latticexyz/config": "2.0.0-next.12",
-    "@latticexyz/schema-type": "2.0.0-next.12",
-    "@latticexyz/store": "2.0.0-next.12",
-    "@latticexyz/world": "2.0.0-next.12",
-    "@latticexyz/world-modules": "2.0.0-next.12",
+    "@latticexyz/cli": "2.0.0-next.13",
+    "@latticexyz/config": "2.0.0-next.13",
+    "@latticexyz/schema-type": "2.0.0-next.13",
+    "@latticexyz/store": "2.0.0-next.13",
+    "@latticexyz/world": "2.0.0-next.13",
+    "@latticexyz/world-modules": "2.0.0-next.13",
     "@typechain/ethers-v5": "^11.0.0",
     "@types/node": "^20.4.4",
     "ds-test": "https://github.com/dapphub/ds-test.git#e282159d5170298eb2455a6c05280ab5a73a4ef0",
