--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -29,14 +29,14 @@
   "dependencies": {
     "contracts": "workspace:*",
     "@ethersproject/providers": "^5.7.2",
-    "@latticexyz/common": "2.0.0-next.14",
-    "@latticexyz/dev-tools": "2.0.0-next.14",
-    "@latticexyz/recs": "2.0.0-next.14",
-    "@latticexyz/schema-type": "2.0.0-next.14",
-    "@latticexyz/services": "2.0.0-next.14",
-    "@latticexyz/store-sync": "2.0.0-next.14",
-    "@latticexyz/utils": "2.0.0-next.14",
-    "@latticexyz/world": "2.0.0-next.14",
+    "@latticexyz/common": "2.0.0-main-e48fb3b0",
+    "@latticexyz/dev-tools": "2.0.0-main-e48fb3b0",
+    "@latticexyz/recs": "2.0.0-main-e48fb3b0",
+    "@latticexyz/schema-type": "2.0.0-main-e48fb3b0",
+    "@latticexyz/services": "2.0.0-main-e48fb3b0",
+    "@latticexyz/store-sync": "2.0.0-main-e48fb3b0",
+    "@latticexyz/utils": "2.0.0-main-e48fb3b0",
+    "@latticexyz/world": "2.0.0-main-e48fb3b0",
     "@sanity/block-content-to-html": "^2.0.0",
     "@sanity/client": "^6.7.0",
     "@sanity/image-url": "^1.0.2",
