--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -3,14 +3,14 @@
   "version": "0.2.0",
   "license": "MIT",
   "scripts": {
-    "build": "pnpm run build:mud && pnpm run build:abi && pnpm run build:typechain",
-    "build:abi": "forge clean && forge build",
+    "build": "pnpm run build:mud && pnpm run build:abi && pnpm run build:abi-ts",
+    "build:abi": "forge build",
     "build:abi-ts": "mud abi-ts",
-    "build:mud": "mud tablegen && mud worldgen",
-    "build:typechain": "rimraf types && typechain --target=ethers-v5 out/IWorld.sol/IWorld.json",
+    "build:mud": "rimraf src/codegen && mud tablegen && mud worldgen",
     "deploy:local": "pnpm run build && mud deploy",
     "deploy:testnet": "pnpm run build && mud deploy --profile=lattice-testnet",
     "dev": "pnpm mud dev-contracts",
+    "faucet": "DEBUG=mud:faucet pnpm faucet-server",
     "lint": "pnpm run prettier && pnpm run solhint",
     "prettier": "prettier --write 'src/**/*.sol'",
     "solhint": "solhint --config ./.solhint.json 'src/**/*.sol' --fix",
@@ -18,16 +18,14 @@
     "test-levels": "mud test --forgeOptions='--match-contract LevelsTest'"
   },
   "devDependencies": {
-    "@ethersproject/abi": "^5.7.0",
-    "@ethersproject/bytes": "^5.7.0",
-    "@ethersproject/providers": "^5.7.2",
-    "@latticexyz/cli": "2.0.0-next.14",
-    "@latticexyz/config": "2.0.0-next.14",
-    "@latticexyz/schema-type": "2.0.0-next.14",
-    "@latticexyz/store": "2.0.0-next.14",
-    "@latticexyz/world": "2.0.0-next.14",
-    "@latticexyz/world-modules": "2.0.0-next.14",
-    "@latticexyz/gas-report": "2.0.0-next.14",
+    "@latticexyz/cli": "2.0.0-main-e48fb3b0",
+    "@latticexyz/config": "2.0.0-main-e48fb3b0",
+    "@latticexyz/faucet": "2.0.0-main-e48fb3b0",
+    "@latticexyz/schema-type": "2.0.0-main-e48fb3b0",
+    "@latticexyz/store": "2.0.0-main-e48fb3b0",
+    "@latticexyz/world": "2.0.0-main-e48fb3b0",
+    "@latticexyz/world-modules": "2.0.0-main-e48fb3b0",
+    "@latticexyz/gas-report": "2.0.0-main-e48fb3b0",
     "@typechain/ethers-v5": "^11.0.0",
     "@types/node": "^20.4.4",
     "ds-test": "https://github.com/dapphub/ds-test.git#e282159d5170298eb2455a6c05280ab5a73a4ef0",
@@ -36,6 +34,9 @@
     "prettier": "^3.0.0",
     "prettier-plugin-solidity": "^1.1.3",
     "solhint": "^3.4.1",
-    "typechain": "^8.3.1"
+    "solhint-config-mud": "2.0.0-main-e48fb3b0",
+    "solhint-plugin-mud": "2.0.0-main-e48fb3b0",
+    "typechain": "^8.3.1",
+    "ts-node": "^10.9.1"
   }
 }
