--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -12,33 +12,32 @@
     "staticPath": "src/public"
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "^2.1.1",
-    "@sveltejs/kit": "^1.27.3",
-    "@sveltejs/vite-plugin-svelte": "^2.4.6",
+    "@sveltejs/adapter-auto": "^3.1.0",
+    "@sveltejs/vite-plugin-svelte": "^3.0.1",
     "@tsconfig/svelte": "^5.0.2",
-    "@types/howler": "^2.2.10",
-    "@types/lodash": "^4.14.197",
-    "@types/uuid": "^9.0.3",
-    "@typescript-eslint/eslint-plugin": "^6.4.0",
-    "@typescript-eslint/parser": "^6.4.0",
-    "sass": "^1.69.5",
-    "svelte": "^4.2.2",
-    "vite": "4.5.0",
+    "@types/howler": "^2.2.11",
+    "@types/lodash": "^4.14.202",
+    "@types/uuid": "^9.0.7",
+    "sass": "^1.69.7",
+    "svelte": "^4.2.8",
+    "vite": "5.0.11",
     "wait-port": "^1.1.0"
   },
   "dependencies": {
     "contracts": "workspace:*",
-    "@ethersproject/providers": "^5.7.2",
-    "@latticexyz/common": "2.0.0-main-66728380",
-    "@latticexyz/dev-tools": "2.0.0-main-66728380",
-    "@latticexyz/recs": "2.0.0-main-66728380",
-    "@latticexyz/schema-type": "2.0.0-main-66728380",
-    "@latticexyz/services": "2.0.0-main-66728380",
-    "@latticexyz/store-sync": "2.0.0-main-66728380",
-    "@latticexyz/utils": "2.0.0-main-66728380",
-    "@latticexyz/world": "2.0.0-main-66728380",
+    "@latticexyz/common": "2.0.0-main-f6f40289",
+    "@latticexyz/dev-tools": "2.0.0-main-f6f40289",
+    "@latticexyz/recs": "2.0.0-main-f6f40289",
+    "@latticexyz/schema-type": "2.0.0-main-f6f40289",
+    "@latticexyz/services": "2.0.0-main-f6f40289",
+    "@latticexyz/store-sync": "2.0.0-main-f6f40289",
+    "@latticexyz/utils": "2.0.0-main-f6f40289",
+    "@latticexyz/world": "2.0.0-main-f6f40289",
     "@sanity/block-content-to-html": "^2.0.0",
-    "@sanity/client": "^6.7.0",
+    "rxjs": "^7.8.1",
+    "uuid": "^9.0.1",
+    "viem": "1.14.0",
+    "@sanity/client": "^6.10.0",
     "@sanity/image-url": "^1.0.2",
     "d3": "^7.8.5",
     "d3-drag": "^3.0.0",
@@ -47,11 +46,7 @@
     "d3-scale-chromatic": "^3.0.0",
     "d3-selection": "^3.0.0",
     "d3-zoom": "^3.0.0",
-    "ethers": "^5.7.2",
-    "howler": "^2.2.3",
-    "lodash": "^4.17.21",
-    "rxjs": "^7.8.1",
-    "uuid": "^9.0.0",
-    "viem": "1.14.0"
+    "howler": "^2.2.4",
+    "lodash": "^4.17.21"
   }
 }
