--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -3,14 +3,11 @@
   "version": "0.2.0",
   "license": "MIT",
   "scripts": {
-    "build": "pnpm run build:mud && pnpm run build:abi && pnpm run build:abi-ts",
-    "build:abi": "forge build",
-    "build:abi-ts": "mud abi-ts",
-    "build:mud": "rimraf src/codegen && mud tablegen && mud worldgen",
+    "build": "mud build",
+    "clean": "forge clean && rimraf src/codegen",
     "deploy:local": "pnpm run build && mud deploy",
     "deploy:testnet": "pnpm run build && mud deploy --profile=lattice-testnet",
     "dev": "pnpm mud dev-contracts",
-    "faucet": "DEBUG=mud:faucet pnpm faucet-server",
     "lint": "pnpm run prettier && pnpm run solhint",
     "prettier": "prettier --write 'src/**/*.sol'",
     "solhint": "solhint --config ./.solhint.json 'src/**/*.sol' --fix",
@@ -18,25 +15,20 @@
     "test-levels": "mud test --forgeOptions='--match-contract LevelsTest'"
   },
   "devDependencies": {
-    "@latticexyz/cli": "2.0.0-main-66728380",
-    "@latticexyz/config": "2.0.0-main-66728380",
-    "@latticexyz/faucet": "2.0.0-main-66728380",
-    "@latticexyz/schema-type": "2.0.0-main-66728380",
-    "@latticexyz/store": "2.0.0-main-66728380",
-    "@latticexyz/world": "2.0.0-main-66728380",
-    "@latticexyz/world-modules": "2.0.0-main-66728380",
-    "@latticexyz/gas-report": "2.0.0-main-66728380",
-    "@typechain/ethers-v5": "^11.0.0",
-    "@types/node": "^20.4.4",
+    "@latticexyz/cli": "2.0.0-main-f6f40289",
+    "@latticexyz/config": "2.0.0-main-f6f40289",
+    "@latticexyz/schema-type": "2.0.0-main-f6f40289",
+    "@latticexyz/store": "2.0.0-main-f6f40289",
+    "@latticexyz/world": "2.0.0-main-f6f40289",
+    "@latticexyz/world-modules": "2.0.0-main-f6f40289",
+    "@latticexyz/gas-report": "2.0.0-main-f6f40289",
+    "@types/node": "^18.15.11",
     "ds-test": "https://github.com/dapphub/ds-test.git#e282159d5170298eb2455a6c05280ab5a73a4ef0",
-    "ethers": "^5.7.2",
     "forge-std": "https://github.com/foundry-rs/forge-std.git#74cfb77e308dd188d2f58864aaf44963ae6b88b1",
-    "prettier": "^3.0.0",
+    "prettier": "^3.1.1",
     "prettier-plugin-solidity": "^1.1.3",
     "solhint": "^3.4.1",
-    "solhint-config-mud": "2.0.0-main-66728380",
-    "solhint-plugin-mud": "2.0.0-main-66728380",
-    "typechain": "^8.3.1",
-    "ts-node": "^10.9.1"
+    "solhint-config-mud": "2.0.0-main-f6f40289",
+    "solhint-plugin-mud": "2.0.0-main-f6f40289"
   }
 }
