chore: update mud code based on skystrife

--- a/packages/contracts/foundry.toml
+++ b/packages/contracts/foundry.toml
@@ -25,3 +25,6 @@ fs_permissions = [{ access = "read", path = "./"}]
 [profile.lattice-testnet]
 # eth_rpc_url = "https://follower.testnet-chain.linfra.xyz"
 eth_rpc_url = "https://miner.testnet-chain.linfra.xyz"
+
+[profile.redstone-holesky]
+eth_rpc_url = "https://rpc.holesky.redstone.xyz/"
