--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -12,33 +12,31 @@
     "staticPath": "src/public"
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "^3.1.0",
+    "@sveltejs/adapter-auto": "^3.1.1",
     "@sveltejs/vite-plugin-svelte": "^3.0.1",
     "@tsconfig/svelte": "^5.0.2",
     "@types/howler": "^2.2.11",
     "@types/lodash": "^4.14.202",
     "@types/uuid": "^9.0.7",
-    "sass": "^1.69.7",
-    "svelte": "^4.2.8",
-    "vite": "5.0.11",
+    "sass": "^1.70.0",
+    "svelte": "^4.2.9",
+    "vite": "5.0.12",
     "wait-port": "^1.1.0"
   },
   "dependencies": {
-    "contracts": "workspace:*",
-    "@latticexyz/common": "2.0.0-main-f6f40289",
-    "@latticexyz/dev-tools": "2.0.0-main-f6f40289",
-    "@latticexyz/recs": "2.0.0-main-f6f40289",
-    "@latticexyz/schema-type": "2.0.0-main-f6f40289",
-    "@latticexyz/services": "2.0.0-main-f6f40289",
-    "@latticexyz/store-sync": "2.0.0-main-f6f40289",
-    "@latticexyz/utils": "2.0.0-main-f6f40289",
-    "@latticexyz/world": "2.0.0-main-f6f40289",
+    "@latticexyz/common": "2.0.0-main-c642ff3a",
+    "@latticexyz/dev-tools": "2.0.0-main-c642ff3a",
+    "@latticexyz/recs": "2.0.0-main-c642ff3a",
+    "@latticexyz/schema-type": "2.0.0-main-c642ff3a",
+    "@latticexyz/services": "2.0.0-main-c642ff3a",
+    "@latticexyz/store-sync": "2.0.0-main-c642ff3a",
+    "@latticexyz/utils": "2.0.0-main-c642ff3a",
+    "@latticexyz/world": "2.0.0-main-c642ff3a",
+    "@rainbow-me/rainbowkit": "^1.3.3",
     "@sanity/block-content-to-html": "^2.0.0",
-    "rxjs": "^7.8.1",
-    "uuid": "^9.0.1",
-    "viem": "1.14.0",
-    "@sanity/client": "^6.10.0",
+    "@sanity/client": "^6.11.1",
     "@sanity/image-url": "^1.0.2",
+    "contracts": "workspace:*",
     "d3": "^7.8.5",
     "d3-drag": "^3.0.0",
     "d3-force": "^3.0.0",
@@ -46,7 +44,12 @@
     "d3-scale-chromatic": "^3.0.0",
     "d3-selection": "^3.0.0",
     "d3-zoom": "^3.0.0",
+    "ethers": "^6.10.0",
     "howler": "^2.2.4",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "rxjs": "^7.8.1",
+    "uuid": "^9.0.1",
+    "viem": "1.14.0",
+    "wagmi": "^2.5.0"
   }
 }
