--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -6,29 +6,33 @@
     "build": "mud build",
     "clean": "forge clean && rimraf src/codegen",
     "deploy:local": "pnpm run build && mud deploy",
-    "deploy:testnet": "pnpm run build && mud deploy --profile=lattice-testnet",
     "dev": "pnpm mud dev-contracts",
     "lint": "pnpm run prettier && pnpm run solhint",
     "prettier": "prettier --write 'src/**/*.sol'",
     "solhint": "solhint --config ./.solhint.json 'src/**/*.sol' --fix",
     "test": "mud test",
-    "test-levels": "mud test --forgeOptions='--match-contract LevelsTest'"
+    "test-levels": "mud test --forgeOptions='--match-contract LevelsTest'",
+    "----- TESTNET -----": "---------------------------",
+    "deploy:testnet": "pnpm run build && mud deploy --profile=lattice-testnet",
+    "faucet:testnet": "pnpm mud faucet --faucetUrl=https://faucet.testnet2-mud-services.linfra.xyz --address",
+    "----- REDSTONE HOLESKY -----": "---------------------------",
+    "deploy:redstone-holesky": "DEBUG=mud:* mud deploy --profile=redstone-holesky"
   },
   "devDependencies": {
-    "@latticexyz/cli": "2.0.0-main-f6f40289",
-    "@latticexyz/config": "2.0.0-main-f6f40289",
-    "@latticexyz/schema-type": "2.0.0-main-f6f40289",
-    "@latticexyz/store": "2.0.0-main-f6f40289",
-    "@latticexyz/world": "2.0.0-main-f6f40289",
-    "@latticexyz/world-modules": "2.0.0-main-f6f40289",
-    "@latticexyz/gas-report": "2.0.0-main-f6f40289",
+    "@latticexyz/cli": "2.0.0-main-c642ff3a",
+    "@latticexyz/config": "2.0.0-main-c642ff3a",
+    "@latticexyz/schema-type": "2.0.0-main-c642ff3a",
+    "@latticexyz/store": "2.0.0-main-c642ff3a",
+    "@latticexyz/world": "2.0.0-main-c642ff3a",
+    "@latticexyz/world-modules": "2.0.0-main-c642ff3a",
+    "@latticexyz/gas-report": "2.0.0-main-c642ff3a",
     "@types/node": "^18.15.11",
     "ds-test": "https://github.com/dapphub/ds-test.git#e282159d5170298eb2455a6c05280ab5a73a4ef0",
     "forge-std": "https://github.com/foundry-rs/forge-std.git#74cfb77e308dd188d2f58864aaf44963ae6b88b1",
     "prettier": "^3.1.1",
     "prettier-plugin-solidity": "^1.1.3",
     "solhint": "^3.4.1",
-    "solhint-config-mud": "2.0.0-main-f6f40289",
-    "solhint-plugin-mud": "2.0.0-main-f6f40289"
+    "solhint-config-mud": "2.0.0-main-c642ff3a",
+    "solhint-plugin-mud": "2.0.0-main-c642ff3a"
   }
 }
