--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -11,6 +11,8 @@
     "prettier": "prettier --write 'src/**/*.sol'",
     "solhint": "solhint --config ./.solhint.json 'src/**/*.sol' --fix",
     "test": "mud test",
+    "test-verbose": "mud test --forgeOptions='--match-test testResolve -vvv'",
+    "test-r": "mud test --forgeOptions='--match-test testResolve'",
     "test-levels": "mud test --forgeOptions='--match-contract LevelsTest'",
     "----- TESTNET -----": "---------------------------",
     "deploy:testnet": "pnpm run build && mud deploy --profile=lattice-testnet",
