--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -11,8 +11,8 @@
     "prettier": "prettier --write 'src/**/*.sol'",
     "solhint": "solhint --config ./.solhint.json 'src/**/*.sol' --fix",
     "test": "mud test",
-    "test-verbose": "mud test --forgeOptions='--match-test testResolve -vvv'",
-    "test-r": "mud test --forgeOptions='--match-test testResolve'",
+    "test-verbose": "mud test --forgeOptions=' -vvv'",
+    "test-single": "mud test --forgeOptions='--match-test xxx'",
     "test-levels": "mud test --forgeOptions='--match-contract LevelsTest'",
     "----- TESTNET -----": "---------------------------",
     "deploy:testnet": "pnpm run build && mud deploy --profile=lattice-testnet",
@@ -23,11 +23,11 @@
   "devDependencies": {
     "@latticexyz/cli": "2.0.0-main-ed05cb31",
     "@latticexyz/config": "2.0.0-main-ed05cb31",
+    "@latticexyz/gas-report": "2.0.0-main-ed05cb31",
     "@latticexyz/schema-type": "2.0.0-main-ed05cb31",
     "@latticexyz/store": "2.0.0-main-ed05cb31",
     "@latticexyz/world": "2.0.0-main-ed05cb31",
     "@latticexyz/world-modules": "2.0.0-main-ed05cb31",
-    "@latticexyz/gas-report": "2.0.0-main-ed05cb31",
     "@types/node": "^20.11.6",
     "ds-test": "https://github.com/dapphub/ds-test.git#e282159d5170298eb2455a6c05280ab5a73a4ef0",
     "forge-std": "https://github.com/foundry-rs/forge-std.git#74cfb77e308dd188d2f58864aaf44963ae6b88b1",
@@ -36,5 +36,8 @@
     "solhint": "^4.1.1",
     "solhint-config-mud": "2.0.0-main-ed05cb31",
     "solhint-plugin-mud": "2.0.0-main-ed05cb31"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts": "^5.0.1"
   }
 }
