--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -12,7 +12,7 @@
     "solhint": "solhint --config ./.solhint.json 'src/**/*.sol' --fix",
     "test": "mud test",
     "test-verbose": "mud test --forgeOptions=' -vvv'",
-    "test-single": "mud test --forgeOptions='--match-test xxx'",
+    "test-single": "mud test --forgeOptions='--match-test testMakeMonster'",
     "test-levels": "mud test --forgeOptions='--match-contract LevelsTest'",
     "----- TESTNET -----": "---------------------------",
     "deploy:testnet": "pnpm run build && mud deploy --profile=lattice-testnet",
