mud-test-gas-report

--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -7,6 +7,7 @@
     "clean": "forge clean && rimraf src/codegen",
     "deploy:local": "pnpm run build && mud deploy",
     "dev": "pnpm mud dev-contracts",
+    "mud-test-gas-report": "GAS_REPORTER_ENABLED=true mud test | pnpm gas-report --stdin --save gas-report.json",
     "lint": "pnpm run prettier && pnpm run solhint",
     "prettier": "prettier --write 'src/**/*.sol'",
     "solhint": "solhint --config ./.solhint.json 'src/**/*.sol' --fix",
