--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -7,7 +7,7 @@
     "build": "vite build",
     "dev": "wait-port localhost:8545 && vite",
     "preview": "vite preview",
-    "test": "vitest",
+    "test": "vitest --run",
     "coverage": "vitest run --coverage"
   },
   "staticFiles": {
