--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -19,6 +19,7 @@
     "@tsconfig/svelte": "^5.0.2",
     "@types/howler": "^2.2.11",
     "@types/lodash": "^4.14.202",
+    "@types/pathfinding": "^0.0.9",
     "@types/uuid": "^9.0.8",
     "@vitest/coverage-v8": "^1.2.2",
     "sass": "^1.70.0",
@@ -51,6 +52,7 @@
     "ethers": "^6.11.0",
     "howler": "^2.2.4",
     "lodash": "^4.17.21",
+    "pathfinding": "^0.4.18",
     "rxjs": "^7.8.1",
     "uuid": "^9.0.1",
     "viem": "1.14.0",
