--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -37,7 +37,7 @@
     "@latticexyz/store-sync": "2.0.0-main-f8af70f5",
     "@latticexyz/utils": "2.0.0-main-f8af70f5",
     "@latticexyz/world": "2.0.0-main-f8af70f5",
-    "@rainbow-me/rainbowkit": "^1.3.6",
+    "@rainbow-me/rainbowkit": "1.0.10",
     "@sanity/block-content-to-html": "^2.0.0",
     "@sanity/client": "^6.14.0",
     "@sanity/image-url": "^1.0.2",
@@ -56,6 +56,8 @@
     "rxjs": "^7.8.1",
     "uuid": "^9.0.1",
     "viem": "1.14.0",
-    "wagmi": "^2.5.7"
+    "wagmi": "1.3.11",
+    "@web3modal/wagmi": "3.5.7",
+    "@wagmi/core": "1.4.13"
   }
 }
