chore: bump mud

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -23,23 +23,22 @@
     "@types/uuid": "^9.0.8",
     "@vitest/coverage-v8": "^1.3.1",
     "sass": "^1.71.1",
-    "svelte": "^4.2.11",
-    "vite": "5.1.3",
+    "svelte": "^4.2.12",
+    "vite": "5.1.4",
     "vitest": "^1.3.1",
     "wait-port": "^1.1.0"
   },
   "dependencies": {
-    "@latticexyz/common": "2.0.0-main-f8af70f5",
-    "@latticexyz/dev-tools": "2.0.0-main-f8af70f5",
-    "@latticexyz/recs": "2.0.0-main-f8af70f5",
-    "@latticexyz/schema-type": "2.0.0-main-f8af70f5",
-    "@latticexyz/services": "2.0.0-main-f8af70f5",
-    "@latticexyz/store-sync": "2.0.0-main-f8af70f5",
-    "@latticexyz/utils": "2.0.0-main-f8af70f5",
-    "@latticexyz/world": "2.0.0-main-f8af70f5",
-    "@rainbow-me/rainbowkit": "^1.3.6",
+    "@latticexyz/common": "2.0.0-main-db314a74",
+    "@latticexyz/dev-tools": "2.0.0-main-db314a74",
+    "@latticexyz/recs": "2.0.0-main-db314a74",
+    "@latticexyz/schema-type": "2.0.0-main-db314a74",
+    "@latticexyz/services": "2.0.0-main-db314a74",
+    "@latticexyz/store-sync": "2.0.0-main-db314a74",
+    "@latticexyz/utils": "2.0.0-main-db314a74",
+    "@latticexyz/world": "2.0.0-main-db314a74",
     "@sanity/block-content-to-html": "^2.0.0",
-    "@sanity/client": "^6.14.0",
+    "@sanity/client": "^6.15.1",
     "@sanity/image-url": "^1.0.2",
     "contracts": "workspace:*",
     "d3": "^7.8.5",
@@ -49,13 +48,11 @@
     "d3-scale-chromatic": "^3.0.0",
     "d3-selection": "^3.0.0",
     "d3-zoom": "^3.0.0",
-    "ethers": "^6.11.1",
     "howler": "^2.2.4",
     "lodash": "^4.17.21",
     "pathfinding": "^0.4.18",
     "rxjs": "^7.8.1",
     "uuid": "^9.0.1",
-    "viem": "1.14.0",
-    "wagmi": "^2.5.7"
+    "viem": "^2.7.16"
   }
 }
