loading state for orders/shop

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -29,14 +29,14 @@
     "wait-port": "^1.1.0"
   },
   "dependencies": {
-    "@latticexyz/common": "2.0.2-main-ed5468cc",
-    "@latticexyz/dev-tools": "2.0.2-main-ed5468cc",
-    "@latticexyz/recs": "2.0.2-main-ed5468cc",
-    "@latticexyz/schema-type": "2.0.2-main-ed5468cc",
-    "@latticexyz/services": "2.0.2-main-ed5468cc",
-    "@latticexyz/store-sync": "2.0.2-main-ed5468cc",
-    "@latticexyz/utils": "2.0.2-main-ed5468cc",
-    "@latticexyz/world": "2.0.2-main-ed5468cc",
+    "@latticexyz/common": "2.0.2",
+    "@latticexyz/dev-tools": "2.0.2",
+    "@latticexyz/recs": "2.0.2",
+    "@latticexyz/schema-type": "2.0.2",
+    "@latticexyz/services": "2.0.2",
+    "@latticexyz/store-sync": "2.0.2",
+    "@latticexyz/utils": "2.0.2",
+    "@latticexyz/world": "2.0.2",
     "@sanity/block-content-to-html": "^2.0.0",
     "@sanity/client": "^6.15.6",
     "@sanity/image-url": "^1.0.2",
