--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -22,21 +22,21 @@
     "deploy:redstone-holesky": "DEBUG=mud:* mud deploy --profile=redstone-holesky"
   },
   "devDependencies": {
-    "@latticexyz/cli": "2.0.2-main-ed5468cc",
-    "@latticexyz/config": "2.0.2-main-ed5468cc",
-    "@latticexyz/gas-report": "2.0.2-main-ed5468cc",
-    "@latticexyz/schema-type": "2.0.2-main-ed5468cc",
-    "@latticexyz/store": "2.0.2-main-ed5468cc",
-    "@latticexyz/world": "2.0.2-main-ed5468cc",
-    "@latticexyz/world-modules": "2.0.2-main-ed5468cc",
+    "@latticexyz/cli": "2.0.2",
+    "@latticexyz/config": "2.0.2",
+    "@latticexyz/gas-report": "2.0.2",
+    "@latticexyz/schema-type": "2.0.2",
+    "@latticexyz/store": "2.0.2",
+    "@latticexyz/world": "2.0.2",
+    "@latticexyz/world-modules": "2.0.2",
     "@types/node": "^20.11.6",
     "ds-test": "https://github.com/dapphub/ds-test.git#e282159d5170298eb2455a6c05280ab5a73a4ef0",
     "forge-std": "https://github.com/foundry-rs/forge-std.git#74cfb77e308dd188d2f58864aaf44963ae6b88b1",
     "prettier": "^3.2.5",
     "prettier-plugin-solidity": "^1.3.1",
     "solhint": "^4.5.2",
-    "solhint-config-mud": "2.0.2-main-ed5468cc",
-    "solhint-plugin-mud": "2.0.2-main-ed5468cc"
+    "solhint-config-mud": "2.0.2",
+    "solhint-plugin-mud": "2.0.2"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.0.2"
