new tutorial orders and more ui work

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -14,9 +14,9 @@
     "staticPath": "src/public"
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "^3.1.1",
+    "@sveltejs/adapter-auto": "^3.2.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.2",
-    "@tsconfig/svelte": "^5.0.3",
+    "@tsconfig/svelte": "^5.0.4",
     "@types/heap": "^0.2.34",
     "@types/howler": "^2.2.11",
     "@types/lodash": "^4.14.202",
@@ -24,19 +24,19 @@
     "@vitest/coverage-v8": "^1.4.0",
     "sass": "^1.72.0",
     "svelte": "^4.2.12",
-    "vite": "5.2.6",
+    "vite": "5.2.7",
     "vitest": "^1.4.0",
     "wait-port": "^1.1.0"
   },
   "dependencies": {
-    "@latticexyz/common": "2.0.2",
-    "@latticexyz/dev-tools": "2.0.2",
-    "@latticexyz/recs": "2.0.2",
-    "@latticexyz/schema-type": "2.0.2",
-    "@latticexyz/services": "2.0.2",
-    "@latticexyz/store-sync": "2.0.2",
-    "@latticexyz/utils": "2.0.2",
-    "@latticexyz/world": "2.0.2",
+    "@latticexyz/common": "2.0.4-main-620e4ec1",
+    "@latticexyz/dev-tools": "2.0.4-main-620e4ec1",
+    "@latticexyz/recs": "2.0.4-main-620e4ec1",
+    "@latticexyz/schema-type": "2.0.4-main-620e4ec1",
+    "@latticexyz/services": "2.0.4-main-620e4ec1",
+    "@latticexyz/store-sync": "2.0.4-main-620e4ec1",
+    "@latticexyz/utils": "2.0.4-main-620e4ec1",
+    "@latticexyz/world": "2.0.4-main-620e4ec1",
     "@sanity/block-content-to-html": "^2.0.0",
     "@sanity/client": "^6.15.6",
     "@sanity/image-url": "^1.0.2",
