--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -17,6 +17,7 @@
     "@sveltejs/adapter-auto": "^3.2.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.2",
     "@tsconfig/svelte": "^5.0.4",
+    "@types/d3-shape": "^3.1.6",
     "@types/heap": "^0.2.34",
     "@types/howler": "^2.2.11",
     "@types/lodash": "^4.14.202",
