--- a/packages/contracts/foundry.toml
+++ b/packages/contracts/foundry.toml
@@ -22,6 +22,9 @@ extra_output_files = [
 ]
 fs_permissions = [{ access = "read", path = "./"}]
 
+[doc]
+ignore=["codegen"]
+
 [profile.lattice-testnet]
 # eth_rpc_url = "https://follower.testnet-chain.linfra.xyz"
 eth_rpc_url = "https://miner.testnet-chain.linfra.xyz"
