--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -23,6 +23,8 @@
     "@types/lodash": "^4.14.202",
     "@types/uuid": "^9.0.8",
     "@vitest/coverage-v8": "^1.4.0",
+    "d3-array": "^3.2.4",
+    "d3-interpolate": "^3.0.1",
     "sass": "^1.72.0",
     "svelte": "^4.2.12",
     "vite": "5.2.8",
