--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test": "pnpm recursive run test"
   },
   "devDependencies": {
-    "@latticexyz/cli": "2.0.6-main-875abd52",
+    "@latticexyz/cli": "2.0.6-account-kit-de34cb1c",
     "@typescript-eslint/eslint-plugin": "7.6.0",
     "@typescript-eslint/parser": "7.6.0",
     "eslint": "9.0.0",
