--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -32,15 +32,15 @@
     "wait-port": "^1.1.0"
   },
   "dependencies": {
-    "@latticexyz/account-kit": "2.0.6-account-kit-530249e6",
-    "@latticexyz/common": "2.0.6-account-kit-530249e6",
-    "@latticexyz/dev-tools": "2.0.6-account-kit-530249e6",
-    "@latticexyz/recs": "2.0.6-account-kit-530249e6",
-    "@latticexyz/schema-type": "2.0.6-account-kit-530249e6",
-    "@latticexyz/services": "2.0.6-account-kit-530249e6",
-    "@latticexyz/store-sync": "2.0.6-account-kit-530249e6",
-    "@latticexyz/utils": "2.0.6-account-kit-530249e6",
-    "@latticexyz/world": "2.0.6-account-kit-530249e6",
+    "@latticexyz/account-kit": "link:../../../../latticexyz/mud/packages/account-kit",
+    "@latticexyz/common": "link:../../../../latticexyz/mud/packages/common",
+    "@latticexyz/dev-tools": "link:../../../../latticexyz/mud/packages/dev-tools",
+    "@latticexyz/recs": "link:../../../../latticexyz/mud/packages/recs",
+    "@latticexyz/schema-type": "link:../../../../latticexyz/mud/packages/schema-type",
+    "@latticexyz/services": "link:../../../../latticexyz/mud/packages/services",
+    "@latticexyz/store-sync": "link:../../../../latticexyz/mud/packages/store-sync",
+    "@latticexyz/utils": "link:../../../../latticexyz/mud/packages/utils",
+    "@latticexyz/world": "link:../../../../latticexyz/mud/packages/world",
     "@sanity/block-content-to-html": "^2.0.0",
     "@sanity/client": "^6.15.13",
     "@sanity/image-url": "^1.0.2",
