--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -6,7 +6,7 @@
     "build": "mud build",
     "clean": "forge clean && rimraf src/codegen",
     "deploy:local": "pnpm run build && mud deploy && pnpm exec ./scripts/progression/mainGameSetup.sh",
-    "dev": "pnpm mud dev-contracts",
+    "dev": "pnpm mud dev-contracts --rpc http://127.0.0.1:8545",
     "mud-test-gas-report": "GAS_REPORTER_ENABLED=true mud test | pnpm gas-report --stdin --save gas-report.json",
     "lint": "pnpm run prettier && pnpm run solhint",
     "prettier": "prettier --write 'src/**/*.sol'",
@@ -25,20 +25,20 @@
     "deploy:redstone-mainnet": "---------------------------"
   },
   "dependencies": {
-    "@latticexyz/cli": "2.0.6-account-kit-530249e6",
-    "@latticexyz/config": "2.0.6-account-kit-530249e6",
-    "@latticexyz/gas-report": "2.0.6-account-kit-530249e6",
-    "@latticexyz/schema-type": "2.0.6-account-kit-530249e6",
-    "@latticexyz/store": "2.0.6-account-kit-530249e6",
-    "@latticexyz/world": "2.0.6-account-kit-530249e6",
-    "@latticexyz/world-modules": "2.0.6-account-kit-530249e6",
+    "@latticexyz/cli": "link:../../../../latticexyz/mud/packages/cli",
+    "@latticexyz/config": "link:../../../../latticexyz/mud/packages/config",
+    "@latticexyz/gas-report": "link:../../../../latticexyz/mud/packages/gas-report",
+    "@latticexyz/schema-type": "link:../../../../latticexyz/mud/packages/schema-type",
+    "@latticexyz/store": "link:../../../../latticexyz/mud/packages/store",
+    "@latticexyz/world": "link:../../../../latticexyz/mud/packages/world",
+    "@latticexyz/world-modules": "link:../../../../latticexyz/mud/packages/world-modules",
     "@types/node": "^20.12.7",
     "ds-test": "github:dapphub/ds-test#c9ce3f25bde29fc5eb9901842bf02850dfd2d084",
     "forge-std": "github:foundry-rs/forge-std#b4f121555729b3afb3c5ffccb62ff4b6e2818fd3",
     "prettier": "^3.2.5",
     "prettier-plugin-solidity": "^1.3.1",
     "solhint": "^4.5.4",
-    "solhint-config-mud": "2.0.6-account-kit-530249e6",
-    "solhint-plugin-mud": "2.0.6-account-kit-530249e6"
+    "solhint-config-mud": "link:../../../../latticexyz/mud/packages/solhint-config-mud",
+    "solhint-plugin-mud": "link:../../../../latticexyz/mud/packages/solhint-plugin-mud"
   }
 }
