--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -33,14 +33,14 @@
   },
   "dependencies": {
     "@latticexyz/account-kit": "link:../../../../latticexyz/mud/packages/account-kit",
-    "@latticexyz/common": "link:../../../../latticexyz/mud/packages/common",
-    "@latticexyz/dev-tools": "link:../../../../latticexyz/mud/packages/dev-tools",
-    "@latticexyz/recs": "link:../../../../latticexyz/mud/packages/recs",
-    "@latticexyz/schema-type": "link:../../../../latticexyz/mud/packages/schema-type",
-    "@latticexyz/services": "link:../../../../latticexyz/mud/packages/services",
-    "@latticexyz/store-sync": "link:../../../../latticexyz/mud/packages/store-sync",
-    "@latticexyz/utils": "link:../../../../latticexyz/mud/packages/utils",
-    "@latticexyz/world": "link:../../../../latticexyz/mud/packages/world",
+    "@latticexyz/common": "link:../../Users/rasmus/Documents/dev/moving-castles/mud/packages/common",
+    "@latticexyz/dev-tools": "link:../../Users/rasmus/Documents/dev/moving-castles/mud/packages/dev-tools",
+    "@latticexyz/recs": "link:../../Users/rasmus/Documents/dev/moving-castles/mud/packages/recs",
+    "@latticexyz/schema-type": "link:../../Users/rasmus/Documents/dev/moving-castles/mud/packages/schema-type",
+    "@latticexyz/services": "link:../../Users/rasmus/Documents/dev/moving-castles/mud/packages/services",
+    "@latticexyz/store-sync": "link:../../Users/rasmus/Documents/dev/moving-castles/mud/packages/store-sync",
+    "@latticexyz/utils": "link:../../Users/rasmus/Documents/dev/moving-castles/mud/packages/utils",
+    "@latticexyz/world": "link:../../Users/rasmus/Documents/dev/moving-castles/mud/packages/world",
     "@sanity/block-content-to-html": "^2.0.0",
     "@sanity/client": "^6.15.13",
     "@sanity/image-url": "^1.0.2",
