use packages from npm

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -26,23 +26,23 @@
     "d3-array": "^3.2.4",
     "d3-interpolate": "^3.0.1",
     "sass": "^1.75.0",
-    "svelte": "^4.2.14",
+    "svelte": "^4.2.15",
     "vite": "5.2.8",
     "vitest": "^1.5.0",
     "wait-port": "^1.1.0"
   },
   "dependencies": {
-    "@latticexyz/account-kit": "link:../../../../latticexyz/mud/packages/account-kit",
-    "@latticexyz/common": "link:../../../../latticexyz/mud/packages/common",
-    "@latticexyz/dev-tools": "link:../../../../latticexyz/mud/packages/dev-tools",
-    "@latticexyz/recs": "link:../../../../latticexyz/mud/packages/recs",
-    "@latticexyz/schema-type": "link:../../../../latticexyz/mud/packages/schema-type",
-    "@latticexyz/services": "link:../../../../latticexyz/mud/packages/services",
-    "@latticexyz/store-sync": "link:../../../../latticexyz/mud/packages/store-sync",
-    "@latticexyz/utils": "link:../../../../latticexyz/mud/packages/utils",
-    "@latticexyz/world": "link:../../../../latticexyz/mud/packages/world",
+    "@latticexyz/account-kit": "2.0.7-account-kit-e29266b9",
+    "@latticexyz/common": "2.0.7-account-kit-e29266b9",
+    "@latticexyz/dev-tools": "2.0.7-account-kit-e29266b9",
+    "@latticexyz/recs": "2.0.7-account-kit-e29266b9",
+    "@latticexyz/schema-type": "2.0.7-account-kit-e29266b9",
+    "@latticexyz/services": "2.0.7-account-kit-e29266b9",
+    "@latticexyz/store-sync": "2.0.7-account-kit-e29266b9",
+    "@latticexyz/utils": "2.0.7-account-kit-e29266b9",
+    "@latticexyz/world": "2.0.7-account-kit-e29266b9",
     "@sanity/block-content-to-html": "^2.0.0",
-    "@sanity/client": "^6.15.13",
+    "@sanity/client": "^6.15.17",
     "@sanity/image-url": "^1.0.2",
     "@wagmi/core": "2.6.16",
     "contracts": "workspace:*",
