--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
     "test": "pnpm recursive run test"
   },
   "devDependencies": {
-    "@latticexyz/cli": "link:../../latticexyz/mud/packages/cli",
-    "@latticexyz/account-kit": "link:../../latticexyz/mud/packages/account-kit",
+    "@latticexyz/account-kit": "2.0.7-account-kit-e29266b9",
+    "@latticexyz/cli": "2.0.7-account-kit-e29266b9",
+    "@latticexyz/gas-tank": "2.0.7-account-kit-e29266b9",
+    "@pimlicolabs/alto": "github:latticexyz/alto#3192a9a",
     "@typescript-eslint/eslint-plugin": "7.6.0",
     "@typescript-eslint/parser": "7.6.0",
     "eslint": "9.0.0",
-    "rimraf": "^5.0.5",
     "mprocs": "^0.6.4",
+    "rimraf": "^5.0.5",
     "typescript": "^5.4.5"
   },
   "engines": {
