--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -25,20 +25,20 @@
     "deploy:redstone-mainnet": "---------------------------"
   },
   "dependencies": {
-    "@latticexyz/cli": "link:../../../../latticexyz/mud/packages/cli",
-    "@latticexyz/config": "link:../../../../latticexyz/mud/packages/config",
-    "@latticexyz/gas-report": "link:../../../../latticexyz/mud/packages/gas-report",
-    "@latticexyz/schema-type": "link:../../../../latticexyz/mud/packages/schema-type",
-    "@latticexyz/store": "link:../../../../latticexyz/mud/packages/store",
-    "@latticexyz/world": "link:../../../../latticexyz/mud/packages/world",
-    "@latticexyz/world-modules": "link:../../../../latticexyz/mud/packages/world-modules",
+    "@latticexyz/cli": "2.0.7-account-kit-e29266b9",
+    "@latticexyz/config": "2.0.7-account-kit-e29266b9",
+    "@latticexyz/gas-report": "2.0.7-account-kit-e29266b9",
+    "@latticexyz/schema-type": "2.0.7-account-kit-e29266b9",
+    "@latticexyz/store": "2.0.7-account-kit-e29266b9",
+    "@latticexyz/world": "2.0.7-account-kit-e29266b9",
+    "@latticexyz/world-modules": "2.0.7-account-kit-e29266b9",
     "@types/node": "^20.12.7",
     "ds-test": "github:dapphub/ds-test#c9ce3f25bde29fc5eb9901842bf02850dfd2d084",
     "forge-std": "github:foundry-rs/forge-std#b4f121555729b3afb3c5ffccb62ff4b6e2818fd3",
     "prettier": "^3.2.5",
     "prettier-plugin-solidity": "^1.3.1",
     "solhint": "^4.5.4",
-    "solhint-config-mud": "link:../../../../latticexyz/mud/packages/solhint-config-mud",
-    "solhint-plugin-mud": "link:../../../../latticexyz/mud/packages/solhint-plugin-mud"
+    "solhint-config-mud": "2.0.7-account-kit-e29266b9",
+    "solhint-plugin-mud": "2.0.7-account-kit-e29266b9"
   }
 }
