--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@latticexyz/account-kit": "2.0.7-account-kit-e29266b9",
     "@latticexyz/cli": "2.0.7-account-kit-e29266b9",
     "@latticexyz/gas-tank": "2.0.7-account-kit-e29266b9",
-    "@pimlicolabs/alto": "github:latticexyz/alto#3192a9a",
+    "@pimlicolabs/alto": "github:pwrstudio/alto",
     "@typescript-eslint/eslint-plugin": "7.6.0",
     "@typescript-eslint/parser": "7.6.0",
     "eslint": "9.0.0",
@@ -28,7 +28,7 @@
     "typescript": "^5.4.5"
   },
   "engines": {
-    "node": "18.x",
+    "node": "20.x",
     "pnpm": "8.x"
   }
 }
