feat: new order design

--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
   "scripts": {
     "build": "pnpm recursive run build",
     "clean": "pnpm recursive run clean",
-    "dev": "mprocs 'pnpm run dev:contracts' 'pnpm run dev:client'",
+    "dev": "mprocs 'pnpm run dev:contracts' 'pnpm run dev:client' 'pnpm run orders'",
     "foundry:up": "curl -L https://foundry.paradigm.xyz | bash && bash $HOME/.foundry/bin/foundryup",
     "dev:client": "pnpm --filter 'client' run dev",
     "dev:contracts": "pnpm --filter 'contracts' run dev",
+    "orders": "wait-port localhost:8545 &&  cd packages/contracts/script/testing && ./runScriptsLocal.sh",
     "playtest": "pnpm --filter 'contracts' run deploy:testnet && pnpm run build && netlify deploy --prod",
     "test": "pnpm recursive run test"
   },
@@ -20,9 +21,10 @@
     "@typescript-eslint/eslint-plugin": "7.6.0",
     "@typescript-eslint/parser": "7.6.0",
     "eslint": "9.0.0",
-    "rimraf": "^5.0.5",
     "mprocs": "^0.6.4",
-    "typescript": "^5.4.5"
+    "rimraf": "^5.0.5",
+    "typescript": "^5.4.5",
+    "wait-port": "^1.1.0"
   },
   "engines": {
     "node": "18.x",
