--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -28,8 +28,7 @@
     "sass": "^1.75.0",
     "svelte": "^4.2.14",
     "vite": "5.2.8",
-    "vitest": "^1.5.0",
-    "wait-port": "^1.1.0"
+    "vitest": "^1.5.0"
   },
   "dependencies": {
     "@latticexyz/common": "2.0.6-main-76fb5f14",
