--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@latticexyz/account-kit": "2.0.7-account-kit-f2f48ad0",
     "@latticexyz/cli": "2.0.7-account-kit-f2f48ad0",
     "@latticexyz/gas-tank": "2.0.7-account-kit-f2f48ad0",
-    "@pimlicolabs/alto": "github:pwrstudio/alto",
+    "@pimlicolabs/alto": "github:latticexyz/alto#3192a9a",
     "@typescript-eslint/eslint-plugin": "7.6.0",
     "@typescript-eslint/parser": "7.6.0",
     "eslint": "9.0.0",
