--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -42,6 +42,8 @@
     "@sanity/block-content-to-html": "^2.0.0",
     "@sanity/client": "^6.15.13",
     "@sanity/image-url": "^1.0.2",
+    "@sentry/svelte": "^7.111.0",
+    "@sentry/vite-plugin": "^2.16.1",
     "contracts": "workspace:*",
     "d3-shape": "^3.2.0",
     "heap": "^0.2.7",
