--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "build": "mud build",
     "clean": "forge clean && rimraf src/codegen",
-    "deploy:local": "pnpm run build && mud deploy && pnpm exec ./scripts/progression/mainGameSetup.sh",
-    "dev": "pnpm mud dev-contracts",
+    "deploy:local": "pnpm run build && mud deploy --forgeScriptOptions='--batch-size 5' && pnpm exec ./scripts/progression/mainGameSetup.sh",
+    "dev": "pnpm mud dev-contracts --forgeScriptOptions='--batch-size 5'",
     "mud-test-gas-report": "GAS_REPORTER_ENABLED=true mud test | pnpm gas-report --stdin --save gas-report.json",
     "lint": "pnpm run prettier && pnpm run solhint",
     "prettier": "prettier --write 'src/**/*.sol'",
@@ -15,14 +15,14 @@
     "test-verbose": "mud test --forgeOptions=' -vvv'",
     "test-single": "mud test --forgeOptions='--match-test testOneMixerTwoInlets'",
     "----- OLD TESTNET -----": "---------------------------",
-    "deploy:testnet": "pnpm run build && mud deploy --profile=lattice-testnet",
+    "deploy:testnet": "pnpm run build && mud deploy --profile=lattice-testnet --forgeScriptOptions='--batch-size 5'",
     "faucet:testnet": "pnpm mud faucet --faucetUrl=https://faucet.testnet2-mud-services.linfra.xyz --address",
     "----- REDSTONE GARNET -----": "---------------------------",
-    "deploy:redstone-garnet": "DEBUG=mud:* mud deploy --profile=redstone-garnet",
+    "deploy:redstone-garnet": "DEBUG=mud:* mud deploy --profile=redstone-garnet --forgeScriptOptions='--batch-size 5'",
     "----- REDSTONE RHODOLITE -----": "---------------------------",
     "deploy:redstone-rhodolite": "---------------------------",
     "----- REDSTONE MAINNET -----": "---------------------------",
-    "deploy:redstone-mainnet": "DEBUG=mud:* mud deploy --profile=redstone"
+    "deploy:redstone-mainnet": "DEBUG=mud:* mud deploy --profile=redstone --forgeScriptOptions='--batch-size 5'"
   },
   "dependencies": {
     "@latticexyz/cli": "2.0.7-main-82ada7a3",
